Fixed mobile horizontal scroll w/ menu

--- a/Sportana/public/stylesheets/style.css
+++ b/Sportana/public/stylesheets/style.css
@@ -1,4 +1,11 @@
+html
+{
+  width: 100%;
+  overflow-x:hidden;
+}
 body {
+  width: 100%;
+  overflow-x:hidden;
   padding-top: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
@@ -12,6 +19,11 @@ a {
 /*.sidebar {
   display: none;
 }*/
+
+.sidebar {
+  background-color: #ffffff;
+}
+
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
